cmscriptdir = ${prefix}/cm/script
dist_cmscript_SCRIPTS = \
	./cm_alarm_patch.sh \
	./cm_common.sh \
	./cm_node.sh \
	./cm_cnm_phys_ip.sh \
	./cm_pool.sh \
	./cm_cnm_migrate.sh \
	./cm_cnm_cifs.sh \
	./cm_cnm_expansion_cabinet.sh \
	./cm_cnm_upgrade.sh \
	./cm_cnm_clumgt.sh \
	./cm_cnm_node_servce.sh \
	./cm_types.sh \
	./cm_cnm_pool_reconstruct.sh \
	./cm_cnm_ipf.sh \
	./cm_cnm_lun.sh \
	./cm_cnm_alarm_storage.sh \
	./userquota.sh \
	./cm_cluster_init.sh \
	./cm_cnm_cluster_nas.sh \
	./cm_cnm_user.sh \
	./cm_cnm_nfs.sh \
	./cm_shell_exec.sh \
	./cm_cnm_duallive_nas.sh \
	./cm_cnm_pmm_protocol.sh \
	./cm_cnm_quota.sh \
	./cm_cnm_dnsm.sh \
	./cm_cnm_port.sh \
	./cm_rpm.sh \
	./cm_gui_install.sh \
	./cm_cnm_topo_fan.sh \
	./cm_cnm_domain_user.sh \
	./cm_cnm.sh \
	./cm_cnm_aggr.sh \
	./cm_cnm_snapshot_backup.sh \
	./cm_cnm_dirquota.sh \
	./cm_cnm_ipshift.sh \
	./quota.sh \
	./cm_cnm_lowdata.sh \
	./cm_clean.sh \
	./cm_disk.sh \
	./cm_topo.sh \
	./cm_system_version.sh \
	./cm_cnm_route.sh \
	./cm_cnm_ntp.sh \
	./cm_cnm_backup_nas.sh \
	./cm_cnm_pmm_sas.sh 
